--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<center>........Hello World</center>
-<b>Site under Maintenance</b>
+<center>Hello World! Comeback Soon</center>
+<center><b>Site under Maintenance</b></center>
